<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="Correo_electrónico">Correo electrónico</string>
    <string name="Contraseña">Contraseña</string>
    <string name="IniciarSesión">Iniciar sesión</string>
    <string name="lblDesarrolladores">By Guama</string>
    <string name="Registrarse">Crear cuenta</string>
    <string name="Nombre">Nombre</string>
    <string name="FechaNacimiento">Fecha de Nacimiento</string>
    <string name="lblRegistroNuevoUsuario">Registro nuevo usuario</string>
    <string name="VolverInicio">Volver </string>
    <string name="confirmarContraseña">Confirma contraseña</string>
    <string name="nombreUser">Nombre usuario</string>
    <string name="numeroTelefono">Número teléfono</string>
    <string name="lblintroduzcaDatos">Introduzca credenciales</string>
    <string name="nombreUsuario">Nombre usuario</string>
    <string name="title_activity_menu_principal">MainActivity</string>
    <string name="inicio">Inicio</string>
    <string name="Ajustes">Ajustes</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="artistas">Artistas</string>
    <string name="albumes">Álbumes</string>
    <string name="canciones">Canciones</string>
    <string name="perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil_nombre_principal">perfil_nombre</string>
    <string name="btn_Configuracion_Avanzada">Configuración</string>
    <string name="btn_Cerrar_Sesion">Cerrar sesión</string>
    <string name="btn_favsong" />
    <string name="btn_favSong">Canciones favoritas</string>
</resources>