<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/inicio"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/inicio"

        android:enabled="true"/>

    <item
        android:id="@+id/artistas"
        android:icon="@drawable/icono_cantante"
        android:title="Artistas"
        android:enabled="true"
        />

    <item
        android:id="@+id/albumes"
        android:icon="@drawable/icono_musica_favorita"
        android:title="@string/albumes"
        android:enabled="true"
        />
    <item
        android:id="@+id/canciones"
        android:icon="@drawable/icono_cancion"
        android:title="Canciones"
        android:enabled="true"
        />
    <item
        android:id="@+id/perfil"
        android:icon="@drawable/icono_perfil"
        android:title="@string/perfil"
        android:enabled="true"
        />



</menu>